# mammamiradio

./: .cache  .commitlintrc.json  .coverage-floors.json  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ADMIN_PANEL_STANDARDS.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONDUCTOR.md  CONTRACT.md  CONTRIBUTING.md  DESIGN-ads-hidden-highlight.md  DESIGN.md  Dockerfile  HA_ADDON_RUNBOOK.md  LICENSE  Makefile  NOTICE  OPERATIONS.md  PRODUCER_REFACTOR_PLAN.md  README.md  RETRO.md  STABILIZATION_LOG.md  Start Radio.command  Stop Radio.command  TODOS.md  TROUBLESHOOTING.md  conductor.json  docker-compose.yml  hacs.json  model_registry.toml  pyproject.toml  radio.toml  repository.yaml  requirements-dev.txt  (+3 more)
.claude/: settings.json
.conductor/: settings.toml
.config/: commit-rules.json  commit-rules.meta.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml  pull_request_template.md
docs/: 2026-04-13-log-resolution-plan.md  2026-04-13-producer-refactor-plan.md  2026-04-16-documentation-structure-audit.md  2026-04-28-cathedral-restructure.md  2026-04-28-codebase-issues-task-vorschlaege.md  2026-04-28-post-cathedral-doc-sweep.md  2026-05-02-source-truthfulness-plan.md  2026-05-17-festival-mode-feature-train.md  2026-05-17-may-festival-feature-train.md  2026-05-30-ha-context-ingestion-pipeline.md  REPO_MAP.md  agents.md  architecture.md  banner.html  conductor.md  festival-mode.md  hero-banner.html  hero-composite.html  listener-qs-train.md  operations.md  party-mode-extension.md  release-process.md  release-trains.md  stabilization-log.md  status-quo.md  todos.md  troubleshooting.md  variant-C.html  variant-F.html  variant-G.html
fakeitaliradio/: __init__.py  config.py  dashboard.html  downloader.py  ha_context.py  listener.html  main.py  models.py  normalizer.py  playlist.py  producer.py  scheduler.py  scriptwriter.py  spotify_auth.py  spotify_player.py  streamer.py  tts.py
go-librespot/: config.yml
ha-addon/: Dockerfile  README.md  build.yaml  config.yaml  go-librespot-config.yml  repository.yaml  run.sh
mammamiradio/: __init__.py  ad_creative.py  admin.html  audio_quality.py  capabilities.py  clip.py  config.py  context_cues.py  dashboard.html  downloader.py  go_librespot_config.py  go_librespot_runtime.py  ha_context.py  ha_enrichment.py  listener.html  live.html  main.py  models.py  normalizer.py  og_card.py  persona.py  playlist.py  producer.py  regia.html  release_campaign.py  restart_handoff.py  scheduler.py  scriptwriter.py  setup_status.py  song_cues.py  spotify_auth.py  spotify_player.py  streamer.py  sync.py  track_rationale.py  track_rules.py  tts.py  voice_catalog.py
proof/: 2026-05-03-addon-build-yaml-fix-runtime.txt  2026-05-03-changelog-lint-runtime.txt  2026-05-08-commit-standards-bootstrap-runtime.txt  2026-05-17-backlog-guard-runtime.txt  2026-05-17-commit-standards-bootstrap-runtime.txt  2026-05-17-edge-addon-runtime.txt  2026-05-31-show-rejected-keys-runtime.txt  2026-06-02-edge-bump-pr-flow-runtime.txt  2026-06-04-ledger-checks.txt  2026-06-04-playback-stop-jazz-stings-tests.txt  2026-06-04-share-clip-warm-errors-runtime.txt  2026-06-04-voice-options-tts-tests.txt  2026-06-05-dynamic-llm-routing-tests.txt  2026-06-06-elevenlabs-voices-tests.txt  2026-06-11-public-admin-routes-tests.txt  2026-06-14-broadcast-chain-toggle-tests.txt  2026-06-14-callback-director-tests.txt  2026-06-14-egress-cache-bake-tests.txt  2026-06-14-fm-broadcast-chain-tests.txt  2026-06-14-ha-label-catalog-tests.txt  2026-06-14-paused-stream-counter-tests.txt  2026-06-15-design-review-admin-listener-runtime.txt  2026-06-15-design-review-admin-listener-tests.txt  2026-06-15-evening-gag-passive-domains-tests.txt  2026-06-15-evening-gags-portable-tests.txt  2026-06-15-ha-green-fallback-tests.txt  2026-06-15-news-flash-fresh-premises-tests.txt  2026-06-15-openai-fallback-catalog-tests.txt  2026-06-16-issue-413-admin-xss.txt  (+161 more)
scripts/: ha-watch.py  (+40 more)
(+487 files in other folders)
