[project]
name = "mammamiradio"
version = "1.1.1"
description = "AI-powered Italian radio station engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "spotipy>=2.24",
    "anthropic>=0.52",
    "edge-tts>=7.0",
    "yt-dlp>=2025.1",
    "python-dotenv>=1.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "tomli>=2.0;python_version<'3.11'",
]

[tool.setuptools]
packages = ["mammamiradio"]

[tool.setuptools.package-data]
mammamiradio = ["*.html", "static/*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "RUF001", "SIM105", "SIM115"]

[tool.ruff.lint.per-file-ignores]
"mammamiradio/scriptwriter.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["mammamiradio"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = false
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not requires_ffmpeg' --timeout=30 -p randomly"
markers = [
    "requires_ffmpeg: marks tests that need ffmpeg installed (run with '-m requires_ffmpeg')",
]

[tool.coverage.run]
branch = true
source = ["mammamiradio"]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
]
