[project]
name = "mammamiradio"
version = "2.10.2"
description = "AI-powered Italian radio station engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",

    "anthropic>=0.94.0",
    "edge-tts>=7.0",
    "python-dotenv>=1.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "openai>=1.0",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "yt-dlp>=2024.0",
    "tomli>=2.0;python_version<'3.11'",
]

[tool.setuptools]
packages = ["mammamiradio"]

[tool.setuptools.package-data]
mammamiradio = ["*.html", "static/*", "demo_assets/**/*"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "RUF001", "SIM105", "SIM115"]

[tool.ruff.lint.per-file-ignores]
"mammamiradio/scriptwriter.py" = ["E501"]
"tests/test_scriptwriter.py" = ["E501"]
"scripts/stream_watch_server.py" = ["N802"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["mammamiradio"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = false
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not requires_ffmpeg'"
markers = [
    "requires_ffmpeg: marks tests that need ffmpeg installed (run with '-m requires_ffmpeg')",
]

[tool.coverage.run]
branch = true
source = ["mammamiradio"]

[tool.coverage.report]
fail_under = 91
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
]
